# g20_pnp

./: CMakeLists.txt  README.md  main.cpp  pnpg2o.cpp  pnpg2o.hpp
result/: log.md  log_1.md
